# go-multisolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiments/2d_constr/: gkls_2d_m_asynch_p_1_d_01.csv  gkls_2d_m_asynch_p_1_d_05.csv  gkls_2d_m_asynch_p_1_d_1.csv  gkls_2d_m_asynch_p_2_d_01.csv  gkls_2d_m_asynch_p_2_d_05.csv  gkls_2d_m_asynch_p_2_d_1.csv  gkls_2d_m_asynch_p_4_d_01.csv  gkls_2d_m_asynch_p_4_d_05.csv  gkls_2d_m_asynch_p_4_d_1.csv  gkls_2d_m_asynch_p_6_d_01.csv  gkls_2d_m_asynch_p_6_d_05.csv  gkls_2d_m_asynch_p_6_d_1.csv  gkls_2d_m_multi_p_1_d_01.csv  gkls_2d_m_multi_p_1_d_05.csv  gkls_2d_m_multi_p_1_d_1.csv  gkls_2d_m_multi_p_2_d_01.csv  gkls_2d_m_multi_p_2_d_05.csv  gkls_2d_m_multi_p_2_d_1.csv  gkls_2d_m_multi_p_4_d_01.csv  gkls_2d_m_multi_p_4_d_05.csv  gkls_2d_m_multi_p_4_d_1.csv  gkls_2d_m_multi_p_6_d_01.csv  gkls_2d_m_multi_p_6_d_05.csv  gkls_2d_m_multi_p_6_d_1.csv  mixed_2d_m_asynch_p_1_d_05.csv  mixed_2d_m_asynch_p_1_d_1.csv  mixed_2d_m_asynch_p_2_d_05.csv  mixed_2d_m_asynch_p_2_d_1.csv  mixed_2d_m_asynch_p_4_d_05.csv  mixed_2d_m_asynch_p_4_d_1.csv  mixed_2d_m_asynch_p_6_d_05.csv  mixed_2d_m_asynch_p_6_d_1.csv  mixed_2d_m_multi_p_1_d_05.csv  mixed_2d_m_multi_p_1_d_1.csv  mixed_2d_m_multi_p_2_d_05.csv  mixed_2d_m_multi_p_2_d_1.csv  mixed_2d_m_multi_p_4_d_05.csv  mixed_2d_m_multi_p_4_d_1.csv  mixed_2d_m_multi_p_6_d_05.csv  mixed_2d_m_multi_p_6_d_1.csv  (+2 more)
experiments/3d_constr/: gkls_3d_m_asynch_p_1_d_05.csv  gkls_3d_m_asynch_p_1_d_1.csv  gkls_3d_m_asynch_p_2_d_05.csv  gkls_3d_m_asynch_p_2_d_1.csv  gkls_3d_m_asynch_p_4_d_05.csv  gkls_3d_m_asynch_p_4_d_1.csv  gkls_3d_m_asynch_p_6_d_05.csv  gkls_3d_m_asynch_p_6_d_1.csv  gkls_3d_m_multi_p_1_d_05.csv  gkls_3d_m_multi_p_1_d_1.csv  gkls_3d_m_multi_p_2_d_05.csv  gkls_3d_m_multi_p_2_d_1.csv  gkls_3d_m_multi_p_4_d_05.csv  gkls_3d_m_multi_p_4_d_1.csv  gkls_3d_m_multi_p_6_d_05.csv  gkls_3d_m_multi_p_6_d_1.csv  run.sh
experiments/4d_constr/: gkls_4d_m_asynch_p_1_d_05.csv  gkls_4d_m_asynch_p_1_d_1.csv  gkls_4d_m_asynch_p_2_d_05.csv  gkls_4d_m_asynch_p_2_d_1.csv  gkls_4d_m_asynch_p_4_d_05.csv  gkls_4d_m_asynch_p_4_d_1.csv  gkls_4d_m_asynch_p_6_d_05.csv  gkls_4d_m_asynch_p_6_d_1.csv  gkls_4d_m_multi_p_1_d_05.csv  gkls_4d_m_multi_p_1_d_1.csv  gkls_4d_m_multi_p_2_d_05.csv  gkls_4d_m_multi_p_2_d_1.csv  gkls_4d_m_multi_p_4_d_05.csv  gkls_4d_m_multi_p_4_d_1.csv  gkls_4d_m_multi_p_6_d_05.csv  gkls_4d_m_multi_p_6_d_1.csv  run.sh
include/: constrainedProblemsPool.hpp  dataTypes.hpp  evolvent.hpp  goSolver.hpp  mco_problems_adapter.hpp  problemsPool.hpp  samples_common.hpp
src/: Map.hpp  X_to_y.cpp  Y_to_x.cpp  dataTypes.hpp  evolvent.cpp  evolvent.hpp  goSolver.hpp  intervalsQueue.cpp  intervalsQueue.hpp  main.cpp  problem_interface.hpp  problemsPool.hpp  solve_constrained_sample.cpp  solve_mco_sample.cpp  solve_sample.cpp
src/GKLS/: gkls_function.cpp  gkls_function.hpp
src/Grishagin/: grishagin_function.cpp  grishagin_function.hpp
